--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,10 +15,12 @@ jobs:
         with:
           app-id: ${{ vars.PROTEGEPROJECT_BOT_APP_ID }}
           private-key: ${{ secrets.PROTEGEPROJECT_BOT_APP_PRIVATE_KEY }}
+
       - uses: actions/checkout@v4
         with:
           token: ${{ steps.app-token.outputs.token }}
           ref: ${{ github.head_ref }}
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -27,32 +29,37 @@ jobs:
           server-id: ossrh
           server-username: OSSRH_USERNAME
           server-password: OSSRH_TOKEN
-          gpg-private-key: ${{secrets.GPG_PRIVATE_KEY}}
+          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
           gpg-passphrase: GPG_PASSPHRASE
+
       - name: Get current version
         id: get-version
         run: |
           current_version=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
           echo "Current version: $current_version"
-          echo "::set-output name=current_version::$current_version"
+          echo "current_version=$current_version" >> $GITHUB_OUTPUT
+
       - name: Bump version
         id: bump
         run: |
           current_version=${{ steps.get-version.outputs.current_version }}
           branch=${GITHUB_REF##*/}
           echo "Current branch: $branch"
-          
+
           # Extract the base version without suffix
           base_version=$(echo $current_version | sed -E 's/(-.*)?$//')
-          
-          # Increment the base version (assuming semantic versioning)
+
+          # Increment the patch version (semantic versioning)
           IFS='.' read -r -a version_parts <<< "$base_version"
           version_parts[2]=$((version_parts[2] + 1))
-          new_base_version="${version_parts[0]}.${version_parts[1]}.${version_parts[2]}"
-          
+          new_version="${version_parts[0]}.${version_parts[1]}.${version_parts[2]}"
+
           echo "New version: $new_version"
           mvn versions:set -DnewVersion=$new_version -DgenerateBackupPoms=false
-          echo "::set-output name=new_version::$new_version"
+
+          # New syntax for step outputs:
+          echo "new_version=$new_version" >> $GITHUB_OUTPUT
+
       - name: Commit new version
         run: |
           git config --global user.name "github-actions[bot]"
@@ -62,8 +69,10 @@ jobs:
           git tag ${{ steps.bump.outputs.new_version }}
           git push origin HEAD:${GITHUB_REF##*/}
           git push origin ${{ steps.bump.outputs.new_version }}
+
       - name: Build with Maven
         run: mvn --batch-mode -Prelease deploy
+
       - name: Release
         uses: softprops/action-gh-release@v1
         env:
@@ -73,6 +82,6 @@ jobs:
           generate_release_notes: true
 
 env:
-  GPG_PASSPHRASE: ${{secrets.GPG_PASSPHRASE}}
-  OSSRH_USERNAME: ${{secrets.OSSRH_USERNAME}}
-  OSSRH_TOKEN: ${{secrets.OSSRH_TOKEN}}
+  GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+  OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+  OSSRH_TOKEN: ${{ secrets.OSSRH_TOKEN }}
